test: simpler e2e test demo

--- a/test/e2e/contract-test/index.html
+++ b/test/e2e/contract-test/index.html
@@ -10,7 +10,7 @@
 
 
   </script>
-  <script src="conflux-portal-onboarding.bundle.js" defer></script>
+  <!-- <script src="conflux-portal-onboarding.bundle.js" defer></script> -->
   <script src="sha3.min.js" defer></script>
   <script src="contract.js" defer></script>
   <link rel="shortcut icon" href="logo.svg">
