--- a/app/offscreen.html
+++ b/app/offscreen.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>MetaMask Offscreen Page</title>
   </head>
   <body>
-    <script src="./load-offscreen.js" defer></script>
+    <script src="./offscreen/offscreen.ts" defer></script>
   </body>
 </html>
