refactor: html dir (#38064)
<!--
Please submit this PR as a draft initially.
Do not mark it as "Ready for review" until the template has been
completely filled out, and PR status checks have passed at least once.
-->

## **Description**

<!--
Write a short description of the changes included in this pull request,
also include relevant motivation and context. Have in mind the following
questions:
1. What is the reason for the change?
2. What is the improvement/solution?
-->

[![Open in GitHub
Codespaces](https://github.com/codespaces/badge.svg)](https://codespaces.new/MetaMask/metamask-extension/pull/38064?quickstart=1)

Previously, we were matching all .html files in the app dir to be
bundled, so the partial html files were unnecessarily included. This PR
aims to solve this problem and separate html pages from partials. The
build output should not contain any partial html files.

## **Changelog**

<!--
If this PR is not End-User-Facing and should not show up in the
CHANGELOG, you can choose to either:
1. Write `CHANGELOG entry: null`
2. Label with `no-changelog`

If this PR is End-User-Facing, please write a short User-Facing
description in the past tense like:
`CHANGELOG entry: Added a new tab for users to see their NFTs`
`CHANGELOG entry: Fixed a bug that was causing some NFTs to flicker`

(This helps the Release Engineer do their job more quickly and
accurately)
-->

CHANGELOG entry: null

## **Related issues**

Fixes: https://github.com/MetaMask/MetaMask-planning/issues/6314

## **Manual testing steps**

1. run `yarn webpack`
2. check if the build output contains partial-body.html,
partial-head.html. it shouldn't
3. everything else should still work

## **Screenshots/Recordings**

Not applicable

<!-- [screenshots/recordings] -->

## **Pre-merge author checklist**

- [x] I've followed [MetaMask Contributor
Docs](https://github.com/MetaMask/contributor-docs) and [MetaMask
Extension Coding
Standards](https://github.com/MetaMask/metamask-extension/blob/main/.github

--- a/app/html/pages/loading.html
+++ b/app/html/pages/loading.html
@@ -7,7 +7,7 @@
   <title>MetaMask Loading</title>
   <% if (it.shouldIncludeSnow) { %>
   <script src="@lavamoat/snow/snow.prod.js"></script>
-  <script src="./scripts/use-snow.js"></script>
+  <script src="../../scripts/use-snow.js"></script>
   <% } %>
   <style>
     #div-logo {
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div id="div-logo">
-    <img id="logo" src="./images/enslogo.svg" loading="lazy">
+    <img id="logo" src="../../images/enslogo.svg" loading="lazy">
     <h1 class="center">MetaMask is querying ENS ...</h1>
   </div>
 </body>
