--- a/app/html/pages/popup.html
+++ b/app/html/pages/popup.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html style="width:400px; height:600px;" dir="ltr">
   <head>
-    <%~ include("partial-head.html") %>
+    <%~ include("html/partials/partial-head.html") %>
   </head>
   <body style="width:400px; height:600px;">
-    <%~ include("partial-body.html") %>
+    <%~ include("html/partials/partial-body.html") %>
   </body>
 </html>
