--- a/app/html/pages/sidepanel.html
+++ b/app/html/pages/sidepanel.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html style="width:100%; height:100%;" dir="ltr">
   <head>
-    <%~ include("partial-head.html") %>
+    <%~ include("html/partials/partial-head.html") %>
   </head>
   <body style="width:100%; height:100%;">
-    <%~ include("partial-body.html") %>
+    <%~ include("html/partials/partial-body.html") %>
   </body>
 </html>
