--- a/app/html/pages/trezor-usb-permissions.html
+++ b/app/html/pages/trezor-usb-permissions.html
@@ -7,7 +7,7 @@
     <title>TrezorConnect | Trezor</title>
     <% if (it.shouldIncludeSnow) { %>
     <script src="@lavamoat/snow/snow.prod.js"></script>
-    <script src="./scripts/use-snow.js"></script>
+    <script src="../../scripts/use-snow.js"></script>
     <% } %>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
@@ -33,5 +33,5 @@
 </head>
 <body>
     <iframe id="trezor-usb-permissions" src="https://connect.trezor.io/9/extension-permissions.html" allow="usb" frameborder="0" width="100%" height="100%"></iframe>
-    <script src="./vendor/trezor/usb-permissions.js"></script>
+    <script src="../../vendor/trezor/usb-permissions.js"></script>
 </body>
